@@ -3,19 +3,17 @@ Hash: SHA256
 
 AUX OSD_RAW_CMD_patch_2.diff 843 SHA256 41ad8460fd67ec56466266fd4e89de712dc8ca99327cf95670a5a0a27b6a9a14 SHA512 57688acc06ac9fcde332e3fba9d4048ac962d7c65c3844ff60e1d48956f7fe0f02315859f427cd5e21695ffa0c3d5cbd46ff953d7d1eca4b3e2ab165f6985e71 WHIRLPOOL 18ef1d95fa4bd2e0e3d353356782d39f84179a9f0f48bb36f5b4705500d7c4030b3ad684a2e186c3c6e64d72d55059f65fb9cd63c170701865b39f406fe9541d
 AUX v4l-dvb-saa716x-Makefilepatch-2.diff 562 SHA256 2b4cd1fd3d185f3d20654d759db177beffa52984178e55e149789697f10edf69 SHA512 e0ff1c5a79f7b02323eff281bf6dc6ebb7a8fe7a43eb83ebd4a7379468924d3992790899bfabbbf2ee411cda6366ad6a677d8ad004a306e14b55d891f6f69dc0 WHIRLPOOL 289bbb5858afed31c77e9427e7e4d2872ed14ae048c9e84ba0faad8435de431271798f5b6ba53bc1217d4554ff36cab94b980cc5a6ead92610be25f85c192432
-DIST v4l-dvb-saa716x-0.0.1_p20130224.tar.gz 5025513 SHA256 862f019aa523bc75d6f5429ffdc2037e58a41cb7480f8ff45d0a793dff7ca434 SHA512 8d22cc1b4b0eab96fbb06639e31baaa2fc94640ad52175e8632a96885a2b1e96b554b91be1a8d342064c530a4aacc0b88a97b5fd61a56be1d5f29c85acfc65c1 WHIRLPOOL 6083f4ae9febfcc6f521e8949d1f12e886030ce5d7ba7898bc1aa387eec768c4d22d04527f5401694b9b70aecc3a7bd265095f20462f98c88ad5f7a86e932e06
-DIST v4l-dvb-saa716x-0.0.1_p20130802.tar.gz 10 SHA256 95618a58558dadbeb0135d3d99fd1f13f83afa2bb72529ed1785308cb3679c99 SHA512 51aabaef7db33a206ae056eb54dd739663bd3c2255abfd101e529d6708c49ca6e3be4b2a205c622b97ca2f69f7184ab4a7bbf203f2589a548599354e23ac0e93 WHIRLPOOL 60b0136a7a6b043154a5312b395e417c84dfa9743b45b85f1c479ded72e64dfc3eafe99b7082227ed568b4ec6ec0b3245f30786a4c62c5392d594d90eab7ed1b
 DIST v4l-dvb-saa716x-0.0.1_p20140322.tar.gz 5026505 SHA256 79ff65c1354506ffb951e23bc1667c372cf22e9eca8309f9b7486fcfec22ef29 SHA512 2b452f6951064f01e88ccf1a2a6f0c9db8ac96779f7b8d56d33cf387d6ed196922edf6b6234d5887ce9dfdb7013772dc874be5ad5893b8e92b23ffe1f2b5d6ea WHIRLPOOL c6f63e835a670455aa871d179283d283d1e3da23f83c868040a48a402178d73d0c7f44ee807076e3cbd72a7b3e1f050d3e6103d2a49c778eddfe19efdba815a7
-EBUILD v4l-dvb-saa716x-0.0.1_p20130224.ebuild 1658 SHA256 fe606e0816369d0e141401167f265ca09c5ddf7a0b7b077e26fe3c87c305747c SHA512 1f6d90f6189818ff50b13cc4312673f2aedcc294511e94c2e3bafd70c5d2f0293a15f77709078dfb40fcb901b8f356adefbcb4b0a003420ab9ec8d3dd67cbd5d WHIRLPOOL 65f75fc55c82c7e2eb0f8997ddb58c316615d607e393bcd04ba8d4836f45ba1ed62f8e906cd3845e8cd42716f8a7450115313bc51d7e9d96e25e757c41f3d9da
-EBUILD v4l-dvb-saa716x-0.0.1_p20130802.ebuild 1658 SHA256 8a651fe16a88161b03cbbcb6faef44d8be27083eb8d460a52e350c4ac2473225 SHA512 666496e14486377408e0eef71fb52d4bf6d80d7bb615b47fdd8ec37dc9fd092980097f4f615451025c14b06585d92d29f93465c7f517d1d389b393e44ed81351 WHIRLPOOL 51d8d1406ba598deb3b3a15db0639c50cc9fa6a5eaeba19436ea3d95f1953ddea584a52bec8deb31592a30a64c63eead6026ca29e0e1cc077a8944902f55e74f
+DIST v4l-dvb-saa716x-0.0.1_p20141109.tar.gz 5028238 SHA256 2c6608f94df9da7681e2b22fdbdd842cdd1e97dd1dac6017c713c1fc037cd2bd SHA512 a67f095d4878b4ceb3b340e725925385fee33b289e875e9e0903370d0ec909d66893d9ac846d5c7fedf469129a3327e3458668db5a83ff2718c04174e6e07c66 WHIRLPOOL 156cac6e08c57c1a4c2b5511d211de784d941c22d6bc7c2aa8188e9c01b8cf043e4f7a3af595180c68af4de6be7d1bfba4f27323c14a18afdd3110e8629802a3
 EBUILD v4l-dvb-saa716x-0.0.1_p20140322.ebuild 1654 SHA256 241f64a86ff5600057c669bca588e63cd0d8336f4b89d8e7ec46137a4e4fd435 SHA512 35d25fc7afdd105a8afddada74f0886ebc04fad5376037655b23c9236c9019b69c9a3047128f7c13cc95b5ab80a31e1cd50664aaab1b9503bd4ec5e2fe76ccb6 WHIRLPOOL 3c296fa1b7ac8bccb2025b89eabefc1c06f255ad5fb1405d242500e354b4f0fbf5423c9769f012710ac906b2a9df6a7bbcf88b15fa9d7c536a33a6f2a0023637
-MISC ChangeLog 1192 SHA256 495d17e7b239c859918d354f1ad6d4f7d426ed7517d9921e499f65af405af366 SHA512 b802980668debb8b82affcfec2d41ebf6766d7075d23d3a8982e0cdab19ed4b7e8c4a422f6d890d51a22798bf13fdf1deaf2a356e535ccb87fcd2718e46b065e WHIRLPOOL 2feb7372a413d47968926c3259ca40a06c5bd93cb9c07b4dd263cd1eef3a6526381511f1398d004b76918efa1a5163fd7f6d7a823939e6b59622c9477172ffe1
+EBUILD v4l-dvb-saa716x-0.0.1_p20141109.ebuild 1651 SHA256 2bb41f42291435f70d59091d3d932005664ed6105b3898c14467e1cc58b0a4e1 SHA512 ce2a32541b97ce12abdc8425f871b441ab25a924e0dd661554fb642918017d10823c12157a2ee33ac0137ec7ef5de97ccbe9dd67e674cd0093cfa9cb96baab79 WHIRLPOOL 82a48a53778d0684b150b8a2defe475670237d7ce8b6b4fe8d2cfb911d1b90beca6b37d91c9d6b29f73055870d103b81e409de30d9d36e2fd4b31ba2768a6016
+MISC ChangeLog 1489 SHA256 fecf1d4b62999cc3664d70f42ccab89441a7c398a2ac266b3525765aec892b90 SHA512 c6560f90abfd0b8e5d8b0914649ea325ba8c2eaff024e6eb836f948367d7bdf3d3c42d8947f3ee5384914c09b2fcc9b1ade280b57d01c33c0aefa75169539dcd WHIRLPOOL 2373b759424fca7ca6665605e804769f0c77e45198a4167471d2272b20ce2713ef93c6c3fd9524269db349173425226595b2a2b544cfcf62d80c2c617b6e3e26
 MISC metadata.xml 540 SHA256 15d8b2b052b419939fd1ac6e41136f1924b1d102000b794b2ee3a0aebfbcb8b8 SHA512 324ad178fca0c503f72704ad28bc3eb9185c05e55ebf4d1b043c2cdef764c40f53358c768a96ac629704eaab1ae77c1f69d17da05bcaf7a083e2c9f4fcf67f71 WHIRLPOOL 116509d1e7062d7feb4d02e66b99e836d48c65355816124862f6eaffacc5b1fe3d474e8e24c262e39c98180ed8f8f5c101ba4fd0122597d6d3d932aea070e4f3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 Comment: added by hd_brummy@gentoo.org
 
-iD8DBQFUpzgbdn07HTTCgIoRCGGqAJwJF1pCDsabtwA4YS7qAJKvl+tOHACfZ/cQ
-hJneb3FhIzIjVUaalGkGiMM=
-=t3qZ
+iD8DBQFU4MjAdn07HTTCgIoRCAVXAJ40tTSnjq1HY4Q83tA7NzbAKbmCEwCdGCtX
+dT7NInDrKcWlnffJAvUg1ac=
+=oGXa
 -----END PGP SIGNATURE-----
