@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst postrm preinst prepare setup
-DEPEND=kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources )
-DESCRIPTION=driver for saa716x based dvb cards like Technotrend S2-6400 or Technisat Skystar 2 eXpress HD
-EAPI=5
-HOMEPAGE=http://powarman.dyndns.org/hgwebdir.cgi/v4l-dvb-saa716x/
-IUSE=+firmware kernel_linux
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2
-RDEPEND=firmware? ( sys-firmware/tt-s2-6400-firmware ) kernel_linux? ( virtual/modutils )
-SLOT=0
-SRC_URI=http://powarman.dyndns.org/hgwebdir.cgi/v4l-dvb-saa716x/archive/0dab24906ff0.tar.gz -> v4l-dvb-saa716x-0.0.1_p20130802.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=78ca5b0112172081f3ca9ccfb6d83317
