@@ -2,12 +2,12 @@ DEFINED_PHASES=compile install postinst postrm preinst prepare setup
 DEPEND=kernel_linux? ( virtual/modutils ) sys-apps/sed kernel_linux? ( virtual/linux-sources )
 DESCRIPTION=driver for saa716x based dvb cards like Technotrend S2-6400 or Technisat Skystar 2 eXpress HD
 EAPI=5
-HOMEPAGE=http://powarman.dyndns.org/hgwebdir.cgi/v4l-dvb-saa716x/
+HOMEPAGE=https://bitbucket.org/powARman/v4l-dvb-saa716x/overview
 IUSE=+firmware kernel_linux
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=firmware? ( sys-firmware/tt-s2-6400-firmware ) kernel_linux? ( virtual/modutils )
 SLOT=0
-SRC_URI=http://powarman.dyndns.org/hgwebdir.cgi/v4l-dvb-saa716x/archive/cfa4b4faab67.tar.gz -> v4l-dvb-saa716x-0.0.1_p20130224.tar.gz
+SRC_URI=https://bitbucket.org/powARman/v4l-dvb-saa716x/get/d7e98fc59230.tar.gz -> v4l-dvb-saa716x-0.0.1_p20141109.tar.gz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	linux-info	2b8c53f6065bdee2d757472215a3088f	linux-mod	101302d4b7b694ea9622bbffb187d0de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f328e60db625ad0d2d2e87f03211e06e
+_md5_=7610b071cb0e154fe0c73fbb22e8700a
